--- a/app/index.jade
+++ b/app/index.jade
@@ -1,13 +1,5 @@
-doctype html
-html(lang='en')
-  head
-    meta(charset='utf-8')
-    meta(content='width=device-width, initial-scale=1.0, maximum-scale=1', name='viewport')
-    title DemocracyOS | Change the Tool
-    link(rel='shortcut icon' type='image/x-icon' href='/img/favicon.png')
-    link(rel='apple-touch-icon' href='/img/favicon.png')
-    link(rel='stylesheet', type='text/css', href='css/app.css')
-  body
-    main
-      p Hello!
-    script(src='js/app.js')
+extends app/layouts/layout.jade
+
+block content
+  main
+    p Hello World!
