--- a/app/index.jade
+++ b/app/index.jade
@@ -1,5 +1,8 @@
 extends app/layouts/layout.jade
 
 block content
+  .cover
+    .content
+      img.change-the-tool(src='/img/change-the-tool-dark.png')
+      a.btn(href='#get-started') Get Started
   main
-    p Hello World!
