--- a/app/layouts/layout.jade
+++ b/app/layouts/layout.jade
@@ -8,5 +8,7 @@ html(lang='en')
     link(rel='apple-touch-icon' href='/img/favicon.png')
     link(rel='stylesheet', type='text/css', href='/css/app.css')
   body
+    include ../partials/header
     block content
     script(src='/js/app.js')
+    link(rel='stylesheet', type='text/css', href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700')
